Added compiler arguments to open packages that became internal starting from Java 9